# Extensiones-Soft-Restaurant

./: .gitignore  README.md  db_legacy.txt  requirements.txt
old/: db_legacy.txt  manage.py  pyrefly.toml  requirements.txt
old/softrestaurant/: settings.py
old/ventas/: apps.py
soft_manager/: .gitignore  README.md  folios_filtrados.csv  mant_express.py  pyproject.toml  ventas_dia.csv
soft_manager/backend/: oldbd.py
soft_manager/backend/backend/: settings.py  urls.py
soft_manager/backend/templates/: base.html
soft_manager/backend/ventas/: filters.py  models.py  scripts.py  serializers.py  urls.py  views.py  viewsets.py
soft_manager/backend/ventas/templates/: cheques.html
soft_manager/frontend/: main.py  ventas_filtradas_2025-08-23.csv  ventas_filtradas_2025-08-24.csv  ventas_filtradas_2025-08-25.csv  ventas_filtradas_2026-06-20.csv  ventas_filtradas_2026-06-21.csv  ventas_filtradas_2026-06-22.csv
soft_manager/frontend/database/: conector.py
soft_manager/frontend/templates/: base.html  index.html  mantenimiento.html
softrestaurant/: asgi.py  settings.py  urls.py  wsgi.py
ventas/: models.py  serializers.py
